--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -29,8 +29,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     environment: 
-      name: production
-      url: https://github.com
+      name: testing
+      url: https://dmma8mozvxpei.cloudfront.net
     steps:
       - name: "Configure AWS Credentials" Action For GitHub Actions
         uses: aws-actions/configure-aws-credentials@v1
