--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -32,7 +32,7 @@ jobs:
       name: testing
       url: "https://dmma8mozvxpei.cloudfront.net"
     steps:
-      - name: "Configure AWS Credentials" Action For GitHub Actions
+      - name: "Configure AWS Credentials" Action For GitHub Actions"
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
