--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -28,11 +28,11 @@ jobs:
   test-deployment:
     needs: build
     runs-on: ubuntu-latest
-    environment: 
+    environment:
       name: testing
       url: "https://dmma8mozvxpei.cloudfront.net"
     steps:
-      - name: "Configure AWS Credentials" Action For GitHub Actions"
+      - name: Configure AWS Credentials Action For GitHub Actions
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -45,5 +45,3 @@ jobs:
       - name: Deploy -> Copy files to the test website with the AWS CLI
         run: |
           aws s3 sync ./out s3://test-github-env-aws-deploy
-
-     
